new additions to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,7 @@ datasets/PseudoData*
 datasets/spikeData_v9.mat
 **__pycache__**
 rsnn.egg-info*
+**egg-info**
 **.DS_Store
+configs/**
+log_dir/4e8b6b6a-1b9d-11e9-9e7e-0242ac1c0002**
